{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 33,
  "lineage": "8715bbba-a232-4322-1c1f-020973f727ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "canada-vpc-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca_central_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:058264270488:internet-gateway/igw-0f1b4a9eef120a51d",
            "id": "igw-0f1b4a9eef120a51d",
            "owner_id": "058264270488",
            "vpc_id": "vpc-0be66e9279e2ae21c"
          },
          "dependencies": [
            "aws_vpc.canada-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us-vpc-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264270488:internet-gateway/igw-07247c3b21dc7bc19",
            "id": "igw-07247c3b21dc7bc19",
            "owner_id": "058264270488",
            "vpc_id": "vpc-0f2273f57cfbbe986"
          },
          "dependencies": [
            "aws_vpc.us-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "canada-vpc-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca_central_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:058264270488:security-group/sg-0bdab5a0fa0d36759",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdab5a0fa0d36759",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240801152447809000000002",
            "name_prefix": "terraform-",
            "owner_id": "058264270488",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be66e9279e2ae21c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.canada-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-vpc-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264270488:security-group/sg-0667d1572d4c66422",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0667d1572d4c66422",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240801154013896700000001",
            "name_prefix": "terraform-",
            "owner_id": "058264270488",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2273f57cfbbe986"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "canada-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca_central_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:058264270488:vpc/vpc-0be66e9279e2ae21c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0cc3b4f49b75d28a8",
            "default_route_table_id": "rtb-0c2360ceee8dbaebe",
            "default_security_group_id": "sg-00a9150d28f3856d8",
            "dhcp_options_id": "dopt-0d7872cb56f643cb6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be66e9279e2ae21c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2360ceee8dbaebe",
            "owner_id": "058264270488",
            "tags": {
              "Name": "VPC peering Canada"
            },
            "tags_all": {
              "Name": "VPC peering Canada"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264270488:vpc/vpc-0f2273f57cfbbe986",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-079d6bd7653220c55",
            "default_route_table_id": "rtb-00ac4040ad8971658",
            "default_security_group_id": "sg-06aba6da1ba674747",
            "dhcp_options_id": "dopt-0eed869a4ca36732e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2273f57cfbbe986",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ac4040ad8971658",
            "owner_id": "058264270488",
            "tags": {
              "Name": "VPC Peering United States"
            },
            "tags_all": {
              "Name": "VPC Peering United States"
            }
          }
        }
      ]
    }
  ]
}